# git-loom

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  test-integration.cmd  test-integration.sh
.claude/: settings.local.json
.github/workflows/: build-and-publish.yaml  ci.yml  docs.yml
docs/: book.toml
docs/src/: SUMMARY.md  configuration.md  installation.md  introduction.md  shell-setup.md
shell/clink/: git-loom.lua
specs/: 001-log.md  001-status.md  002-shortid.md  003-reword.md  004-internal-sequence-edit.md  004-weave.md  005-branch.md  006-commit.md  007-fold.md  008-drop.md  009-init.md  010-update.md  011-push.md  012-absorb.md  013-split.md  014-continue-abort.md  015-swap.md  016-diff.md  017-switch.md  018-add.md
src/: absorb.rs  absorb_test.rs  add.rs  add_patch_test.rs  add_test.rs  branch.rs  branch_test.rs  commit.rs  commit_test.rs  diff.rs  diff_test.rs  drop.rs  drop_test.rs  fold.rs  fold_test.rs  git.rs  git_test.rs  graph.rs  graph_test.rs  init.rs  init_test.rs  log.rs  main.rs  msg.rs  push.rs  push_test.rs  reword.rs  reword_test.rs  shortid.rs  shortid_test.rs  show.rs  show_test.rs  split.rs  split_test.rs  status.rs  status_test.rs  swap.rs  swap_test.rs  switch.rs  test_helpers.rs  (+7 more)
src/branch/: merge.rs  merge_test.rs  mod.rs  new.rs  new_test.rs  unmerge.rs  unmerge_test.rs
src/completions/: git-loom.lua  git-loom.ps1  mod.rs
src/core/: diff.rs  diff_test.rs  graph.rs  graph_test.rs  mod.rs  msg.rs  repo.rs  repo_test.rs  shortid_test.rs  staging.rs  test_helpers.rs  transaction.rs  weave.rs  (+1 more)
(+67 files in other folders)
