[package]
name = "git-loom"
version = "0.4.0"
edition = "2024"
rust-version = "1.90"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
cliclack = "0.3"
colored = "3"
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-escape = "0.1"

[dev-dependencies]
tempfile = "3"
